--- a/extract/common.config
+++ b/extract/common.config
@@ -5,7 +5,7 @@ use constant HTTP_RETRYCOUNT   => 3;
 use constant HTTP_THRESHOLD    => 15;
 use constant DEBUG             => 0;
 
-use constant USERAGENT         => 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_3) AppleWebKit/537.75.14 (KHTML, like Gecko) Version/7.0.3 Safari/7046A194A';
+use constant USERAGENT         => '';#'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_3) AppleWebKit/537.75.14 (KHTML, like Gecko) Version/7.0.3 Safari/7046A194A';
 
 
 
